[gd_scene load_steps=11 format=3 uid="uid://cd70x3de3pbl4"]

[ext_resource type="Script" path="res://Scripts/character.gd" id="1_lo1uq"]
[ext_resource type="PackedScene" uid="uid://byhwdai31bud7" path="res://Assets/modelos3D/Character.glb" id="1_nfcse"]

[sub_resource type="BoxShape3D" id="BoxShape3D_fo83p"]
size = Vector3(1.165, 1.2, 0.68)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_7lqso"]
radius = 0.63868
height = 3.3195

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_qknsb"]
radius = 0.174
height = 0.378

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_kselr"]
radius = 0.136
height = 0.759742

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_b1rjh"]
radius = 0.202
height = 0.484

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_77usr"]
radius = 0.148
height = 0.533628

[sub_resource type="SphereShape3D" id="SphereShape3D_8pxlo"]
radius = 0.2

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_b8vb3"]
radius = 0.489
height = 1.168

[node name="Character" type="Node3D"]
script = ExtResource("1_lo1uq")

[node name="Physical" parent="." instance=ExtResource("1_nfcse")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="Skeleton3D" parent="Physical/Armature" index="0"]
animate_physical_bones = false
bones/1/rotation = Quaternion(-2.66925e-08, -2.66925e-08, -0.707107, 0.707107)
bones/2/rotation = Quaternion(-2.19835e-16, -6.37343e-09, -6.37343e-09, 1)
bones/4/rotation = Quaternion(2.66925e-08, 2.66925e-08, 0.707107, 0.707107)
bones/5/rotation = Quaternion(0.5, -0.5, 0.5, 0.5)
bones/6/rotation = Quaternion(3.18671e-09, -2.83169e-08, 2.22457e-16, 1)
bones/8/rotation = Quaternion(-0.707107, -4.63629e-08, 1.53133e-07, 0.707107)
bones/9/rotation = Quaternion(0.511753, 0.487964, 0.511753, -0.487964)
bones/10/rotation = Quaternion(-0.657775, 0.170822, 0.193404, 0.707635)
bones/11/rotation = Quaternion(-0.0127088, -5.68294e-08, 1.04324e-09, 0.999919)
bones/12/rotation = Quaternion(7.54397e-08, 4.65653e-10, 1, 1.42099e-08)
bones/13/rotation = Quaternion(0.511753, -0.487964, 0.511753, 0.487964)
bones/14/rotation = Quaternion(0.652767, 0.198687, -0.20314, 0.702248)
bones/15/rotation = Quaternion(0.0127088, 8.61047e-08, -7.97921e-10, 0.999919)
bones/16/rotation = Quaternion(-5.49798e-08, 1.05841e-14, 1, -2.98023e-08)

[node name="Character" parent="Physical/Armature/Skeleton3D" index="0"]
gi_mode = 2

[node name="Physical Bone Body" type="PhysicalBone3D" parent="Physical/Armature/Skeleton3D" index="1"]
transform = Transform3D(1, 3.42285e-08, 4.9738e-14, 4.9738e-14, -2.66454e-14, -1, -3.42285e-08, 1, -2.66454e-14, -5.32907e-15, 0.500001, 8.94069e-08)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.64797e-14, -8.94069e-08, 0.500001)
body_offset = Transform3D(1, 0, 5.06167e-14, 5.06167e-14, -1.71143e-08, -1, 0, 1, -1.71143e-08, -8.82869e-15, 0.500001, 9.79641e-08)
friction = 0.2
linear_damp_mode = 1
angular_damp = 1.0
can_sleep = false
bone_name = "Body"

[node name="CollisionShape3D" type="CollisionShape3D" parent="Physical/Armature/Skeleton3D/Physical Bone Body"]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, -0.14)
shape = SubResource("BoxShape3D_fo83p")

[node name="Camera3D" type="Camera3D" parent="Physical/Armature/Skeleton3D/Physical Bone Body"]
transform = Transform3D(-1, -1.74846e-07, 8.74228e-08, -8.74228e-08, -4.37114e-08, -1, 1.74846e-07, -1, 4.37114e-08, 0, -7.211, -2.575)

[node name="CharacterArea" type="Area3D" parent="Physical/Armature/Skeleton3D/Physical Bone Body"]
transform = Transform3D(1, 4.9738e-14, -3.42285e-08, 3.42285e-08, -2.66454e-14, 1, 4.9738e-14, -1, -2.66454e-14, -1.64797e-14, -8.94069e-08, 0.500001)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Physical/Armature/Skeleton3D/Physical Bone Body/CharacterArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.757974, 0)
shape = SubResource("CapsuleShape3D_7lqso")

[node name="Physical Bone LArm1" type="PhysicalBone3D" parent="Physical/Armature/Skeleton3D" index="2"]
transform = Transform3D(-1.27468e-08, 3.42284e-08, -1, -1, -1.15238e-13, 1.27468e-08, -1.14801e-13, 1, 3.42284e-08, 0.91576, 1, 1.01328e-06)
joint_type = 2
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.3113e-06, -1.06174e-06, 0.31882)
body_offset = Transform3D(1, 1.05359e-07, 5.81141e-14, 5.77316e-14, -1.84741e-13, -1, -1.05359e-07, 1, -1.84741e-13, -1.3113e-06, 0.31882, 1.06174e-06)
friction = 0.2
linear_damp_mode = 1
angular_damp = 1.0
bone_name = "LArm1"
joint_constraints/swing_span = 180.0
joint_constraints/twist_span = 90.0
joint_constraints/bias = 0.3
joint_constraints/softness = 0.8
joint_constraints/relaxation = 1.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Physical/Armature/Skeleton3D/Physical Bone LArm1"]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, -0.095)
shape = SubResource("CapsuleShape3D_qknsb")

[node name="Physical Bone LArm2" type="PhysicalBone3D" parent="Physical/Armature/Skeleton3D" index="3"]
transform = Transform3D(1.14115e-07, 3.42284e-08, -1, -1, -2.08617e-07, -1.14115e-07, -2.08617e-07, 1, 3.42284e-08, 1.61445, 0.999999, 6.55651e-07)
joint_type = 2
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.7486e-07, -7.28026e-07, 0.379874)
body_offset = Transform3D(1, 1.87114e-07, -8.07755e-14, -8.12029e-14, -1.84741e-13, -1, -1.87114e-07, 1, -1.7053e-13, 7.7486e-07, 0.379874, 7.28026e-07)
friction = 0.2
linear_damp_mode = 1
angular_damp = 1.0
bone_name = "LArm2"
joint_constraints/swing_span = 180.0
joint_constraints/twist_span = 90.0
joint_constraints/bias = 0.3
joint_constraints/softness = 0.8
joint_constraints/relaxation = 1.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Physical/Armature/Skeleton3D/Physical Bone LArm2"]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, -0.06)
shape = SubResource("CapsuleShape3D_kselr")

[node name="Physical Bone RArm1" type="PhysicalBone3D" parent="Physical/Armature/Skeleton3D" index="4"]
transform = Transform3D(3.42284e-08, -3.51255e-07, 1, -2.84217e-14, -1, -3.51255e-07, 1, -1.63988e-14, -3.42284e-08, -0.91576, 1, -1.07288e-06)
joint_type = 2
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.08711e-06, 9.58865e-07, 0.31882)
body_offset = Transform3D(1, 3.95195e-08, 1.56319e-13, 1.42109e-13, 3.57628e-07, -1, -3.95195e-08, 1, 3.57628e-07, -1.08711e-06, 0.31882, -1.07288e-06)
friction = 0.2
linear_damp_mode = 1
angular_damp = 1.0
bone_name = "RArm1"
joint_constraints/swing_span = 180.0
joint_constraints/twist_span = 90.0
joint_constraints/bias = 0.3
joint_constraints/softness = 0.8
joint_constraints/relaxation = 1.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Physical/Armature/Skeleton3D/Physical Bone RArm1"]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, -0.095)
shape = SubResource("CapsuleShape3D_qknsb")

[node name="Physical Bone RArm2" type="PhysicalBone3D" parent="Physical/Armature/Skeleton3D" index="5"]
transform = Transform3D(3.42286e-08, -2.57778e-07, 1, -1.84741e-13, -1, -2.57778e-07, 1, -1.75918e-13, -3.42286e-08, -1.61445, 1, -6.55651e-07)
joint_type = 2
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.93797e-07, 2.36754e-06, 0.379874)
body_offset = Transform3D(1, 1.84461e-07, 1.42109e-14, -4.26326e-14, 3.57628e-07, -1, -1.84461e-07, 1, 3.57628e-07, -6.93798e-07, 0.379874, -2.5034e-06)
friction = 0.2
linear_damp_mode = 1
angular_damp = 1.0
bone_name = "RArm2"
joint_constraints/swing_span = 180.0
joint_constraints/twist_span = 90.0
joint_constraints/bias = 0.3
joint_constraints/softness = 0.8
joint_constraints/relaxation = 1.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Physical/Armature/Skeleton3D/Physical Bone RArm2"]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, -0.06)
shape = SubResource("CapsuleShape3D_kselr")

[node name="Physical Bone LLeg1" type="PhysicalBone3D" parent="Physical/Armature/Skeleton3D" index="6"]
transform = Transform3D(0.0253375, 0.999505, -0.0186501, -0.497961, 0.0287958, 0.866722, 0.866829, -0.0126735, 0.498444, 0.384847, -0.249418, -0.133035)
joint_type = 2
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.07834e-07, 1.15247e-06, 0.266901)
body_offset = Transform3D(1, -1.17347e-07, 2.08616e-07, 8.9407e-08, 2.56114e-08, -1, 7.35745e-08, 1, 3.67872e-08, 5.21541e-08, 0.266901, -1.16229e-06)
friction = 0.2
linear_damp_mode = 1
angular_damp = 1.0
bone_name = "LLeg1"
joint_constraints/swing_span = 180.0
joint_constraints/twist_span = 45.0
joint_constraints/bias = 0.3
joint_constraints/softness = 0.8
joint_constraints/relaxation = 1.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Physical/Armature/Skeleton3D/Physical Bone LLeg1"]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, 0)
shape = SubResource("CapsuleShape3D_b1rjh")

[node name="Physical Bone LLeg2" type="PhysicalBone3D" parent="Physical/Armature/Skeleton3D" index="7"]
transform = Transform3D(0.0253375, 0.999656, 0.0067588, -0.49796, 0.00675835, 0.867174, 0.86683, -0.0253376, 0.49796, 0.388023, -0.712119, -0.398932)
joint_type = 2
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.06806e-09, -2.67475e-07, 0.266814)
body_offset = Transform3D(1, -3.72529e-08, -5.06639e-07, -5.96046e-07, -1.11759e-08, -1, -3.72529e-09, 1, -2.79397e-09, 1.3411e-07, 0.266814, 2.68221e-07)
friction = 0.2
linear_damp_mode = 1
angular_damp = 1.0
bone_name = "LLeg2"
joint_constraints/swing_span = 180.0
joint_constraints/twist_span = 45.0
joint_constraints/bias = 0.3
joint_constraints/softness = 0.8
joint_constraints/relaxation = 1.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Physical/Armature/Skeleton3D/Physical Bone LLeg2"]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, -0.055)
shape = SubResource("CapsuleShape3D_77usr")

[node name="OnFloorLeft" type="ShapeCast3D" parent="Physical/Armature/Skeleton3D/Physical Bone LLeg2"]
transform = Transform3D(1, 0, 0, 0, 1, -3.25888e-15, 0, 2.93831e-16, 1, -1.27161e-08, 2.98023e-08, 0.194772)
shape = SubResource("SphereShape3D_8pxlo")
target_position = Vector3(0, 0, -0.4)
max_results = 10

[node name="Physical Bone RLeg1" type="PhysicalBone3D" parent="Physical/Armature/Skeleton3D" index="8"]
transform = Transform3D(1.50957e-07, 0.999677, 0.0254164, 0.544879, -0.0213121, 0.838244, 0.838515, 0.0138487, -0.544703, -0.386656, -0.241816, 0.145381)
joint_type = 2
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.35795e-07, 1.64131e-06, 0.2669)
body_offset = Transform3D(1, -3.39933e-07, -5.96046e-07, -4.47035e-07, 2.48663e-07, -1, 3.18512e-07, 1, 2.15136e-07, 3.94881e-07, 0.2669, -1.69873e-06)
friction = 0.2
linear_damp_mode = 1
angular_damp = 1.0
bone_name = "RLeg1"
joint_constraints/swing_span = 180.0
joint_constraints/twist_span = 45.0
joint_constraints/bias = 0.3
joint_constraints/softness = 0.8
joint_constraints/relaxation = 1.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Physical/Armature/Skeleton3D/Physical Bone RLeg1"]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, 0)
shape = SubResource("CapsuleShape3D_b1rjh")

[node name="Physical Bone RLeg2" type="PhysicalBone3D" parent="Physical/Armature/Skeleton3D" index="9"]
transform = Transform3D(6.88247e-09, 1, 9.7315e-07, 0.544879, -8.19751e-07, 0.838515, 0.838515, 5.24478e-07, -0.544879, -0.393439, -0.689273, 0.436145)
joint_type = 2
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.73121e-08, 8.12338e-07, 0.266816)
body_offset = Transform3D(1, -3.83885e-07, -1.16229e-06, -1.07288e-06, 3.48315e-07, -1, 3.57871e-07, 1, 3.06323e-07, 3.8743e-07, 0.266816, -8.9407e-07)
friction = 0.2
linear_damp_mode = 1
angular_damp = 1.0
bone_name = "RLeg2"
joint_constraints/swing_span = 180.0
joint_constraints/twist_span = 45.0
joint_constraints/bias = 0.3
joint_constraints/softness = 0.8
joint_constraints/relaxation = 1.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Physical/Armature/Skeleton3D/Physical Bone RLeg2"]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, -0.055)
shape = SubResource("CapsuleShape3D_77usr")

[node name="OnFloorRight" type="ShapeCast3D" parent="Physical/Armature/Skeleton3D/Physical Bone RLeg2"]
transform = Transform3D(1, 0, 0, 0, 1, -3.25888e-15, 0, 2.93831e-16, 1, -1.27161e-08, 2.98023e-08, 0.194772)
shape = SubResource("SphereShape3D_8pxlo")
target_position = Vector3(0, 0, -0.4)
max_results = 10

[node name="Physical Bone Head" type="PhysicalBone3D" parent="Physical/Armature/Skeleton3D" index="10"]
transform = Transform3D(1, 2.40864e-07, -9.24417e-21, -2.82627e-21, -2.66454e-14, -1, -2.40864e-07, 1, -2.66454e-14, -9.94758e-14, 1.78387, 3.57627e-07)
joint_type = 2
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.91528e-13, -3.80546e-07, 0.444697)
body_offset = Transform3D(1, 5.11591e-13, 4.41509e-15, 4.4151e-15, -1.71143e-08, -1, -5.11591e-13, 1, -1.71143e-08, -1.93491e-13, 0.444697, 3.88157e-07)
friction = 0.2
linear_damp_mode = 1
angular_damp = 1.0
bone_name = "Head"
joint_constraints/swing_span = 90.0
joint_constraints/twist_span = 100.0
joint_constraints/bias = 0.3
joint_constraints/softness = 0.8
joint_constraints/relaxation = 1.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Physical/Armature/Skeleton3D/Physical Bone Head"]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, -0.105)
shape = SubResource("CapsuleShape3D_b8vb3")

[node name="AnimationPlayer" parent="Physical" index="1"]
autoplay = "idle"

[node name="JumpTimer" type="Timer" parent="Physical"]
one_shot = true

[node name="Animated" parent="." instance=ExtResource("1_nfcse")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)
visible = false

[node name="Skeleton3D" parent="Animated/Armature" index="0"]
bones/0/rotation = Quaternion(0.000474975, 0.000474975, 0.000474975, 1.00048)
bones/1/rotation = Quaternion(-2.66925e-08, -2.66925e-08, -0.707107, 0.707107)
bones/4/rotation = Quaternion(2.66925e-08, 2.66925e-08, 0.707107, 0.707107)
bones/5/rotation = Quaternion(0.5, -0.5, 0.5, 0.5)
bones/8/rotation = Quaternion(-0.707107, -4.63629e-08, 1.53133e-07, 0.707107)
bones/10/rotation = Quaternion(-0.999525, -0.999525, 1.00048, 1.00048)
bones/11/rotation = Quaternion(-0.0127088, 5.5979e-09, 9.1722e-09, 0.999919)
bones/12/rotation = Quaternion(7.54397e-08, 4.65653e-10, 1, 1.42099e-08)
bones/13/rotation = Quaternion(0.511753, -0.487964, 0.511753, 0.487964)
bones/14/rotation = Quaternion(0.000474975, 0.000474975, 0.000474975, 0.000474975)
bones/15/rotation = Quaternion(0.0127088, -5.29268e-09, 1.40116e-08, 0.999919)
bones/16/rotation = Quaternion(7.54979e-08, -1.14265e-14, 1, -1.4937e-15)

[connection signal="skeleton_updated" from="Physical/Armature/Skeleton3D" to="." method="_on_skeleton_3d_skeleton_updated"]
[connection signal="area_entered" from="Physical/Armature/Skeleton3D/Physical Bone Body/CharacterArea" to="." method="_on_character_area_area_entered"]
[connection signal="timeout" from="Physical/JumpTimer" to="." method="_on_jump_timer_timeout"]

[editable path="Physical"]
[editable path="Animated"]
